# DataEngineering-Zoomcamp

./: .cursorignore  .gitignore  pyproject.toml
01-docker-terraform/homework/: Dockerfile  README.md  data_exploration.ipynb  docker_comands.txt  homework.md  trip_ingestion.py  zone_ingestion.py
01-docker-terraform/pipeline/: Dockerfile  Untitled.ipynb  data_ingestion.ipynb  data_ingestion.py  docker-compose.yml  docker_run_command  pipeline.py  postgres
01-docker-terraform/terraform/: main.tf  variables.tf
02-workflow-orchestration/: docker-compose.yml
02-workflow-orchestration/flows/: 04_postgres_taxi.yaml
02-workflow-orchestration/homework/: gcp_taxi_pipeline.yaml  gcp_taxi_scheduled_file_row_counts.yaml  homework.md  homework2_assignment.yaml
03-data-warehouse/: homework.md  homework3_queries.sql  load_yellow_taxi_data.py
04-analytics-engineering/: .gitignore  load_data.py  main.tf  variables.tf  web_to_gcs.py
04-analytics-engineering/taxi_rides_ny/: dbt-project-exaplained.md
04-analytics-engineering/taxi_rides_ny/macros/: get_vendor_names.sql
04-analytics-engineering/taxi_rides_ny/models/marts/: _schema.yml  dim_vendors.sql
04-analytics-engineering/taxi_rides_ny/models/staging/: _sources.yml  base_raw_data_yellow_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
